--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="https://394215.8b.io#" target="_blank"><img src="/img/blackcat1200x630.jpg"
+                    <a href="https://394215.8b.io#" target="_blank"><img src="./img/blackcat1200x630.jpg"
                             class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">8b.com</h5>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="https://test-e23f5f.webflow.io" target="_blank"><img src="/img/orangecat935x637.jpg"
+                    <a href="https://test-e23f5f.webflow.io" target="_blank"><img src="./img/orangecat935x637.jpg"
                             class="card-img-top" alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">Webflow</h5>
