--- a/offline.html
+++ b/offline.html
@@ -11,6 +11,7 @@
         const el = document.createElement('pwa-update');
         document.body.appendChild(el);
     </script>
+    <script src="pwabuilder-sw.js"></script>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
