--- a/offline.html
+++ b/offline.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petite-Vue Demo</title>
-    <link rel="manifest" href="manifest.json" />
-    <script type="module">
-        import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
-        const el = document.createElement('pwa-update');
-        document.body.appendChild(el);
-    </script>
-    <script src="pwabuilder-sw.js"></script>
+    <title>Petite-Vue Demo Offline</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,7 +28,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <a class="navbar-brand" href="#">NavBar (Offline)</a>
+            <a class="navbar-brand" href="#">Offline</a>
             <button class="navbar-toggler" type="button" data-bs-target="#myNav" data-bs-toggle="collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
