--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
     </style>
 
+
 </head>
 
 <body>
@@ -64,13 +65,14 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="./img/white_cat_sleeping_962x640.jpg" class="card-img-top" alt="...">
+                    <a href="https://genericoctopus.github.io/Snake_Simple/" target="_blank"><img src="./img/snake.png"
+                            class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                        <h5 class="card-title">Test of Bootstrap Card</h5>
+                        <h5 class="card-title">Snake Game</h5>
                         <p class="card-text">
-                            Testing Bootstrap's card functions & tooling.
+                            A simple Snake game built using javascript.
                         </p>
-                        <a href="#" class="btn btn-primary">#</a>
+                        <a href="https://genericoctopus.github.io/Snake_Simple/" class="btn btn-primary">Snake Game</a>
                     </div>
                 </div>
             </div>
@@ -105,6 +107,8 @@
             </div>
 
         </div>
+
+
 
 
 </body>
