--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Git Source Pages
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="#">Project 1</a>
+                                <a class="dropdown-item" href="https://github.com/GenericOctopus/minimal_demo">Petite-Vue Minimalist Demo (Current Page)</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Project 2</a>
+                                <a class="dropdown-item" href="https://github.com/GenericOctopus/Snake_Simple">Snake</a>
                             </li>
                         </ul>
                     </li>
